fix(navigation-primary: scrollbar only on overflow - item too

--- a/elements/rh-navigation-primary/rh-navigation-primary-item.css
+++ b/elements/rh-navigation-primary/rh-navigation-primary-item.css
@@ -275,7 +275,7 @@
           inset-inline-end: 0;
           inline-size: 100%;
           max-block-size: calc(100dvh - var(--_navbar-height));
-          overflow-y: scroll;
+          overflow-y: auto;
 
           @container (min-width: 1200px) {
             inline-size: fit-content;
